# vslsp

./: .gitignore  CLAUDE.md  PLAN.md  README.md  install.sh  mcp.ts  package.json  vslsp.ts
.github/workflows/: build.yml  release.yml
Plans/: federated-coalescing-lampson.md  handoff.md  nifty-skipping-waterfall.md  optimized-petting-cosmos.md  splendid-seeking-kettle.md
docs/: AX.md  vslsp-proposals.md
scripts/: download-omnisharp.ts  release.ts
skills/vslsp/: SKILL.md
src/: diagnostics-store.ts  diagnostics.ts  http-server.ts  lsp-client.ts  types.ts
src/code-mapping/: mapper.ts  registry.ts
src/commands/: notify.ts  query.ts  serve.ts
src/core/: defaults.ts  language.ts  logger.ts  lsp-client.ts  types.ts
src/diagnostics/: client.ts  collector.ts  daemon.ts  http.ts  rust.ts  store.ts  typescript.ts
tests/: http.test.ts
tests/code-mapping/: mapper.test.ts
tests/core/: types.test.ts
tests/diagnostics/: rust.test.ts  store.test.ts  typescript.test.ts
tests/e2e/: mcp-server.test.ts
tools/code-mapper/: CodeMapper.csproj  Program.cs
tools/csharp-mapper/: CSharpMapper.csproj  Program.cs
tools/rust-mapper/: Cargo.toml
tools/rust-mapper/src/: main.rs
tools/ts-mapper/: main.ts  package.json  tsconfig.json
