[package]
name = "rust-mapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-mapper"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
